Fix alignment in footer, fix border in nav.
Recover from git corruption.

--- a/assets/stylesheets/layouts/footer.scss
+++ b/assets/stylesheets/layouts/footer.scss
@@ -1,5 +1,15 @@
 footer {
   background-color: $dark-background;
-  text-align: center;
   white-space: nowrap;
+
+  .email {
+    text-align: left;
+  }
+  .telephone {
+    text-align: center;
+  }
+  .copyright {
+    text-align: right;
+  }
+
 }
